Added organization info

--- a/DSS_metadata/VIPS.yaml
+++ b/DSS_metadata/VIPS.yaml
@@ -13,6 +13,7 @@ organization:
  postal_code: "1431"
  city: Ås
  email: berit.nordskog@nibio.no
+ url: https://www.nibio.no/
 languages:
 - Norwegian
 - English
