--- a/weather_data/Weather_data_sources.yaml
+++ b/weather_data/Weather_data_sources.yaml
@@ -6,6 +6,14 @@ datasources:
     name: "Met Norway Locationforecast"
     description: "9-day forecasts for the entire planet. 2.5 km resolution in the Nordic-Baltic region, 9km elsewhere"
     public_URL: "https://api.met.no/weatherapi/locationforecast/1.9/documentation"
+    organization: 
+      name: The Norwegian Meteorological Institute
+      country: Norway
+      address: Postboks 43 Blindern
+      postal_code: "0371"
+      city: Oslo
+      email: david.melchior@met.no
+      url: https://www.met.no/en
     endpoint: "https://ipmdecisions.nibio.no/weather/rest/weatheradapter/yr/"
     needs_data_control: false
     temporal:
@@ -34,6 +42,14 @@ datasources:
     name: "Landbruksmeteorologisk tjeneste"
     description: "Weather station network covering major agricultural areas of Norway. Data before 2010 are available by request. Email lmt@nibio.no"
     public_URL: "https://lmt.nibio.no/"
+    organization: 
+      name: NIBIO
+      country: Norway
+      address: Postboks 115
+      postal_code: "1431"
+      city: Ås
+      email: berit.nordskog@nibio.no
+      url: https://www.nibio.no/
     endpoint: "https://ipmdecisions.nibio.no/lmtservices/rest/ipmdecisions/getdata/"
     needs_data_control: true
     temporal:
