Added more VIPS models

--- a/DSS_metadata/VIPS.yaml
+++ b/DSS_metadata/VIPS.yaml
@@ -176,6 +176,73 @@ models:
         title: Calculated risk value
         description: null
 #####
+- name: Alternaria TOMCAST
+  id: ALTERNARIA
+  version: 1.0
+  authors: # List of the model authors
+  - name: Dr R. E. Pitblado
+  pests:
+  - ALTESO # EPPO code for Potato late blight (Phytophthora infestans)
+  crops:
+  - SOLTU, DAUCS # EPPO code for potato
+  type_of_decision: Short-term tactical
+  type_of_output: Risk indication
+  description_URL: https://www.vips-landbruk.no/forecasts/models/ALTERNARIA/ 
+  description: |
+    TOMCAST is based on a model that was originally developed for leaf spot diseases in tomato. The model that is used here is tested and adapted to be used against early blight in potato in Denmark (Alternaria solani). The model calculates daily risk values (DSV: Disease Severity Values) based on temperature and leaf wetness the previous day. DSV represents the risk of attack of early blight the previous 24 hours. Daily values of DSV are accumulated until a threshold value is reached, and treatment is recommended. When a spray is performed and entered into the model, accumulation of DSV is reset and starts over at 0.
+  citation: null # Optional. Use the DOI as identifier (list)
+  # Where has this model been considered valid
+  valid_spatial:
+    # Using country codes to get GeoJSON. Saves a lot of duplication.
+    # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+    countries:
+      - NOR
+    # Optionally, use a custom polygon
+    geoJSON: |-
+      {}
+  input:
+   weather: # TODO: weather parameter codes, frequency codes and unit codes
+   - parameter_code: 1002 # = Mean temp at 2m measured in Celcius.
+     interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
+   - parameter_code: 3101  # Leaf wetness duration. Measured in minutes with wetness per period 
+     interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
+  execution:
+    type: ONTHEFLY
+    endpoint: https://ipmdecisions.nibio.no/vipscore/models/ALTERNARIA/run/ipmd
+    form_method: post # Could be get or post
+    content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
+# The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema: |
+      {
+        "type":"object",
+        "properties": {
+          "modelId": {"type": "string", "pattern":"^ALTERNARIA$", "title": "Model Id (Must be ALTERNARIA)", "default":"ALTERNARIA"},
+          "configParameters": {
+            "type": "object",
+            "title":"Configuration parameters",
+            "properties": {
+              "timeZone": {"type": "string", "title": "Time zone (e.g. Europe/Oslo)"},
+              "timeStart": {"type": "string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
+              "timeEnd": {"type": "string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"},
+              "sprayingDates": {"type": "array", "minItems":"0", "maxItems" : "3", "title": "Spraying dates","items":{"type":"date"}}
+            },
+            "required": ["timeZone","timeStart","timeEnd"]
+          },
+          "weatherData": {
+            "$ref": "https://ipmdecisions.nibio.no/weather/rest/schema/weatherdata"
+          }
+        },
+        "required": ["modelId","configParameters"]
+      }
+  output: 
+    warning_status_interpretation: |-
+      The model will be green (no risk) until it reaches 15. From this value the warning will be yellow (possible risk) until the threshold is reached, and the warning turns red (risk of infection).
+    result_parameters:
+      # the id is used with the model_id as the namespace
+      - id: DSV_SUM
+        title: Aggregated Daily Disease Severity Value
+        description: The aggregated risk
+#####
 - name: Septoria apiicola model
   id: SEPAPIICOL
   version: 1.0
@@ -187,7 +254,7 @@ models:
     email: arne.hermansen@nibio.no
     organization: NIBIO
   pests: 
-  - SEPTAP # EPPO code
+  - SEPTAP # EPPO code for the disease
   crops:
   - APUGD # EPPO code for celery
   type_of_decision: Short-term tactical
@@ -217,7 +284,7 @@ models:
      interval: 3600
    field_observation:
     species: 
-    - SEPTAP # EPPO Code
+    - SEPTAP # EPPO Code for the disease
   execution:
     type: ONTHEFLY # [ONTHEFLY, BATCH, TICKET]
     endpoint: https://ipmdecisions.nibio.no/vipscore/models/SEPAPIICOL/run/ipmd
@@ -279,4 +346,162 @@ models:
       - id: PEST_OBSERVED
         title: Has the pest been observed in or near the field, or in the nearby region
         description: Without this, the warning status will never exceed yellow status
-
+- name: Carrot rust fly temperature model
+  id: PSILARTEMP
+  version: 1.0
+  authors: # List of the model authors
+  - name: Berit Nordskog
+    email: berit.nordskog@nibio.no
+    organization: NIBIO
+  pests: 
+  - PSILRO # EPPO code for carrot rust fly
+  crops:
+  - DAUCS # EPPO code for carrot
+  keywords: foo, bar, mechanistic, regression
+  type_of_decision: Short-term tactical
+  type_of_output: Risk indication
+  description_URL: https://www.vips-landbruk.no/forecasts/models/PSILARTEMP/
+  description: |
+    The warning system model «Carrot rust fly temperature» is based on a Finnish temperature-based model (Markkula et al, 1998; Tiilikkala & Ojanen, 1999; Markkula et al, 2000). The model determines the start of the flight period for the 1st and 2nd generation of carrot rust fly based on accumuleted degree-days (day-degrees) over a base temperature of 5,0 °C. VIPS uses the model for the 1st generation only. 
+    Standard air temperature (temperature measured 2 m above ground) is used in the model. Degree-days are defined for this model as the sum of the difference between a base temperature of 5,0 °C and the mean temperature for all days with a temperature >5,0 °C, in other words (daily mean temperature – 5,0 °C) from 1 March (beginning when the ground has thawed).
+  citation: null # Optional. Use the DOI as identifier (list)
+  # Where has this model been considered valid
+  valid_spatial:
+    # Using country codes to get GeoJSON. Saves a lot of duplication.
+    # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+    countries:
+      - NOR
+    # Optionally, use a custom polygon
+    geoJSON: |-
+      {}
+  input:
+   weather: 
+   - parameter_code: 1002 # = Mean air temp at 2m
+     interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
+  execution: 
+    type: ONTHEFLY
+    endpoint: https://ipmdecisions.nibio.no/vipscore/models/PSILARTEMP/run/ipmd
+    form_method: post # Could be get or post
+    content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
+    # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema: |
+      {
+        "type":"object",
+        "properties": {
+          "modelId": {"type": "string", "pattern":"^PSILARTEMP$", "title": "Model Id", "default":"PSILARTEMP", "description":"Must be PSILARTEMP"},
+          "configParameters": {
+            "title":"Configuration parameters",
+            "type": "object",
+            "properties": {
+              "timeZone": {"type": "string", "title": "Time zone (e.g. Europe/Oslo)", "default":"Europe/Oslo"},
+              "timeStart": {"type":"string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
+              "timeEnd": {"type":"string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"}
+            },
+            "required": ["timeZone","timeStart","timeEnd"]
+          },
+          "weatherData": {
+            "$ref": "https://ipmdecisions.nibio.no/weather/rest/schema/weatherdata"
+          }
+        },
+        "required": ["modelId","configParameters"]
+      }
+    # Definition of the result parameters specific for this DSS model
+  output: 
+    warning_status_interpretation: |-
+      Green warning indicates that the flight period has not yet begun.
+      Yellow warning indicates that the flight period is beginning and that flies can be coming into the field.
+      Red warning indicates peak flight period.
+      Grey warning indicates that the flight period of the 1st generation is over.
+      Be aware that in areas with field covers (plastic, single or double non-woven covers, etc.) with early crops the preceding season (either on the current field or neighboring fields), the flight period can start earlier due to higher soil temperature under the covers.
+    result_parameters:
+      # the id is used with the model_id as the namespace
+      - id: TMDD5C
+        title: Accumulated day degrees
+        description: The accumulated day degrees with a base temperature of 5 degrees celcius
+- name: Bremia lactucae (Downy mildew of lettuce) model
+  id: BREMIALACT
+  version: 1.0
+  authors: # List of the model authors
+  - name: Berit Nordskog
+    email: berit.nordskog@nibio.no
+    organization: NIBIO
+  pests: 
+  - BREMLA # EPPO code for Downy mildew of lettuce
+  crops:
+  - 1LACG # EPPO code for the genus Lactuca
+  keywords: none
+  type_of_decision: Short-term tactical
+  type_of_output: Risk indication
+  description_URL: https://www.vips-landbruk.no/forecasts/models/BREMIALACT/
+  description: |
+    TODO
+  citation: null # Optional. Use the DOI as identifier (list)
+  # Where has this model been considered valid
+  valid_spatial:
+    # Using country codes to get GeoJSON. Saves a lot of duplication.
+    # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+    countries:
+      - NOR
+    # Optionally, use a custom polygon
+    geoJSON: |-
+      {}
+  input:
+   weather: 
+   - parameter_code: 1002 # = Mean air temp at 2m
+     interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
+  execution: 
+    type: ONTHEFLY
+    endpoint: https://ipmdecisions.nibio.no/vipscore/models/PSILARTEMP/run/ipmd
+    form_method: post # Could be get or post
+    content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
+    # The input template should adhere to the JSON Schema standard: https://json-schema.org/
+    input_schema: |
+      {
+        "type":"object",
+        "properties": {
+          "modelId": {"type": "string", "pattern":"^PSILARTEMP$", "title": "Model Id", "default":"PSILARTEMP", "description":"Must be PSILARTEMP"},
+          "configParameters": {
+            "title":"Configuration parameters",
+            "type": "object",
+            "properties": {
+              "timeZone": {"type": "string", "title": "Time zone (e.g. Europe/Oslo)", "default":"Europe/Oslo"},
+              "timeStart": {"type":"string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
+              "timeEnd": {"type":"string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"}
+            },
+            "required": ["timeZone","timeStart","timeEnd"]
+          },
+          "weatherData": {
+            "$ref": "https://ipmdecisions.nibio.no/weather/rest/schema/weatherdata"
+          }
+        },
+        "required": ["modelId","configParameters"]
+      }
+    # Definition of the result parameters specific for this DSS model
+  output: 
+    warning_status_interpretation: |-
+      Downy mildew in lettuce normally occurs in the second half of the summer, and not every year in lettuce producing regions.
+      Thus, spraying should only be considered after considering the likelihood of the disease being present.
+      When the model indicates a high risk of infection, spraying should be considered given a) the likelihoold of the disease being present,
+      given the time in the season, b) the lettuce variant's resilience towards the disease and c) the time since the last spraying.
+      Normally you don't spray more often than every 10th day, but if the infection risk is considered high over a longer period and 
+      actual field observations being made, one can consider a new treatment as early as 7 days since the last spraying.
+    result_parameters:
+      # the id is used with the model_id as the namespace
+      - id: TXD
+        title: Maximum daily temperature
+        description: The maximum daily temperature
+      - id: ELWAST
+        title: Was there enough leaf wetness after sunrise today
+        description: Was there enough leaf wetness after sunrise today
+      - id: ELWASYBST
+        title: Was there enough relative humidity after sunrise yesterday and befor sunrise today
+        description: Was there enough relative humidity after sunrise yesterday and befor sunrise today
+      - id: SLN
+        title: Was there sporulation last night
+        description: Was there sporulation last night
+      - id: SYN
+        title: Was there sporulation yesterday night
+        description: Was there sporulation yesterday night
+      - id: TXD_THRESHOLD
+        title: Max threshold for temperature for infection
+        description: If the max temperature is above this threshold, infection does not occur
