--- a/weather_data/Weather_data_sources.yaml
+++ b/weather_data/Weather_data_sources.yaml
@@ -38,6 +38,42 @@ datasources:
        - 3001 # Instantaneous RH at 2m (%)
        - 2001 # Precipitation (mm)
        - 4002 # Instantaneous wind speed at 2m
+- 
+    name: "FMI weather forecasts"
+    description: "36 hour forecasts for Finland from the Finnish Meteorological Institute"
+    public_URL: "https://en.ilmatieteenlaitos.fi/open-data"
+    organization: 
+      name: The Finnish Meteorological Institute
+      country: Finland
+      address: Dynamicum, Erik Palménin aukio 1
+      postal_code: "FI-00560"
+      city: Helsinki
+      email: webmaster@fmi.fi
+      url: https://en.ilmatieteenlaitos.fi/
+    endpoint: "https://ipmdecisions.nibio.no/weather/rest/weatheradapter/fmi/forecasts"
+    needs_data_control: false
+    temporal:
+      historic: #  
+        start: null # Start == null => No measured/historic/observational data
+        end: null #null => Recent data available (continuously updated) UNLESS OF COURSE start == null
+      forecast: 2 # 0 = no forecast. All other positive integers indicate the number of days ahead
+    access_type: location
+    spatial: 
+      # Using country codes to get GeoJSON. Saves a lot of duplication.
+      # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+      # e.g.
+      # - NOR
+      # - SWE
+      countries: 
+	- FIN
+    parameters:
+      common:
+       - 1001 # Instantaneous temperature at 2m (Celcius)
+       - 1901 # Dew point temperature
+       - 2001 # Precipitation (mm)
+       - 3001 # Instantaneous RH at 2m (%)
+       - 4002 # Instantaneous wind speed at 2m
+       - 5001 # Global radiation (W/sqm)
   -
     name: Finnish Meteorological Institute measured data
     description: Weather station network covering Finland. Data availability varies between the stations. The oldest station is from 1844
